# terminal-todo

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  main.c  tasks.txt  types.c  types.h
.cache/clangd/index/: base.c.ECCF473E8BA9BF62.idx  base.h.DDB02963D155C9EA.idx  component.c.DC5AC55279EFECAE.idx  component.h.5A576C4FB1509EF7.idx  core.c.0BFDACD7E8E1EBE6.idx  core.h.17C152FD4B8F86DD.idx  input.c.F15AF88F38380FA2.idx  input.h.8570F9C25304CFEA.idx  label.c.7887253BE75EFCA0.idx  label.h.75B575833B0CCEDD.idx  main.c.83582504CEAF2A6D.idx  panel.c.518D2764E4463019.idx  panel.h.F7302DBD46B12CBB.idx  types.c.84B72563BB35F721.idx  types.h.6A59B330015F0480.idx
tui/: color.c  color.h  component.c  component.h  core.c  core.h  focus.c  focus.h  input.c  input.h  utility.c  utility.h
tui/components/: base.c  base.h  label.c  label.h  panel.c  panel.h  textbox.c  textbox.h
tui/extended/: group_component.c  group_component.h  task_component.c  task_component.h
